--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@jest/globals": "^29.7.0",
     "@react-oauth/google": "^0.12.1",
+    "@types/react-modal": "^3.16.3",
     "axios": "^1.7.2",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-modal": "^3.16.1",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.4"
