--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "install": "npm install --legacy-peer-deps",
+    "install": "npm ci --legacy-peer-deps",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "eslint": "eslint .",
-    "test": "jest --watch --coverage"
+    "test": "jest --watchAll --coverage"
   },
   "dependencies": {
     "@jest/globals": "^29.7.0",
